--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -16,6 +16,38 @@
     <title>Landing Page | Bootstrap</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a href="/" class="navbar-brand">Bootstrap</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="#inicio" class="nav-link" aria-current="page">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a href="#servicios" class="nav-link">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a href="#comentarios" class="nav-link">Comentarios</a>
+            </li>
+            <li class="nav-item">
+              <a href="#suscribete" class="nav-link">Suscribete</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
