--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
+    <!-- Bootstrap Iconos -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <title>Landing Page | Bootstrap</title>
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a href="/" class="navbar-brand">Bootstrap</a>
+        <a href="/" class="navbar-brand">
+          <i class="bi bi-bootstrap"></i>
+          Bootstrap
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -139,6 +146,17 @@
         </button>
       </div>
     </section>
+    <!-- principal -->
+    <main class="bg-dark text-white py-5" id="servicios">
+      <div class="container">
+        <div class="text-center py-5 text-primary">
+          <i class="bi bi-star-fill h4"></i>
+          <i class="bi bi-star-fill h4"></i>
+          <i class="bi bi-star-fill h4"></i>
+        </div>
+        <h2 class="text-center display-4">Servicios</h2>
+      </div>
+    </main>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
