--- a/index.html
+++ b/index.html
@@ -154,7 +154,33 @@
           <i class="bi bi-star-fill h4"></i>
           <i class="bi bi-star-fill h4"></i>
         </div>
-        <h2 class="text-center display-4">Servicios</h2>
+        <h2 class="text-center display-4 mb-5">Servicios</h2>
+        <div class="row align-items-center">
+          <div class="col-12 col-lg-4">
+            <h5>Lorem ipsum dolor sit amet.</h5>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est
+              ab vitae? Vel iure perspiciatis, mollitia natus nostrum rerum
+              consequuntur porro. Impedit aspernatur ex sequi.
+            </p>
+            <button class="btn btn-outline-light mb-5 mb-lg-0">
+              Suscribirse
+            </button>
+          </div>
+          <div class="col-12 col-lg-8">
+            <img
+              src="https://placeimg.com/1000/400/arch/grayscale"
+              alt=""
+              class="img-fluid rounded"
+            />
+          </div>
+        </div>
+        <h1 class="display-6 py-5">
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+          impedit voluptatum recusandae architecto unde expedita voluptatibus
+          dolorem, inventore minus provident!"
+        </h1>
       </div>
     </main>
     <!-- Option 1: Bootstrap Bundle with Popper -->
