--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
       </div>
     </nav>
+
     <!-- carrusel -->
     <section id="inicio">
       <div
@@ -146,13 +147,14 @@
         </button>
       </div>
     </section>
+
     <!-- principal -->
     <main class="bg-dark text-white py-5" id="servicios">
       <div class="container">
         <div class="text-center py-5 text-primary">
-          <i class="bi bi-star-fill h4"></i>
-          <i class="bi bi-star-fill h4"></i>
-          <i class="bi bi-star-fill h4"></i>
+          <i class="bi bi-star-fill h1"></i>
+          <i class="bi bi-star-fill h1"></i>
+          <i class="bi bi-star-fill h1"></i>
         </div>
         <h2 class="text-center display-4 mb-5">Servicios</h2>
         <div class="row align-items-center">
@@ -183,6 +185,134 @@
         </h1>
       </div>
     </main>
+
+    <!-- comentarios -->
+    <section class="py-5 bg-light" id="comentarios">
+      <div class="container text-center">
+        <div class="py-5 h1">
+          <i class="bi bi-chat-left-quote"></i>
+          <i class="bi bi-chat-left-quote"></i>
+          <i class="bi bi-chat-left-quote"></i>
+        </div>
+        <h2 class="mb-5 display-4">Comentarios</h2>
+        <p class="lead mb-5">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, aliquam
+          provident sed commodi quo laboriosam velit blanditiis nulla magni
+          asperiores iste, animi repellendus quibusdam sequi saepe illum
+          deleniti natus eos.
+        </p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5 mb-md-0">
+            <img
+              src="https://placeimg.com/600/800/animals"
+              class="img-fluid rounded"
+              alt=""
+            />
+          </div>
+          <div class="col-12 col-md-6 col-lg-8 col-xl-9">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It
+                    is shown by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    Accordion Item #2
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong>
+                    It is hidden by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    Accordion Item #3
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It
+                    is hidden by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
