--- a/index.html
+++ b/index.html
@@ -313,6 +313,75 @@
       </div>
     </section>
 
+    <!-- suscribete -->
+    <section class="bg-secondary text-light" id="suscribete">
+      <div class="container">
+        <div class="text-center h1 py-5">
+          <i class="bi bi-inbox"></i>
+          <i class="bi bi-inbox"></i>
+          <i class="bi bi-inbox"></i>
+        </div>
+        <h2 class="text-center mb-5 display-4">Suscríbete</h2>
+        <p class="lead text-center pb-5">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+          ipsum velit molestias ea nostrum error, eligendi tempora voluptates
+          accusamus ad.
+        </p>
+        <div class="row text-center text-dark">
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="my-5">$100</h2>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+              </ul>
+              <div class="card-body">
+                <button class="btn btn-outline-dark">Suscríbete</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="my-5">$600</h2>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+              </ul>
+              <div class="card-body">
+                <button class="btn btn-outline-dark">Suscríbete</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="my-5">$1000</h2>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+                <li class="list-group-item">Lorem, ipsum dolor.</li>
+              </ul>
+              <div class="card-body">
+                <button class="btn btn-outline-dark">Suscríbete</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
