--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
     />
     <title>Landing Page | Bootstrap</title>
   </head>
-  <body>
+  <body
+    style="position: relative"
+    data-bs-spy="scroll"
+    data-bs-target="#navbar-example3"
+    data-bs-offset="10"
+    tabindex="0"
+  >
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
+      id="navbar-example3"
+    >
       <div class="container">
         <a href="/" class="navbar-brand">
           <i class="bi bi-bootstrap"></i>
@@ -400,6 +409,15 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="container-fluid bg-dark py-5 text-center text-light">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem itaque
+        laborum repellendus, tempore illo modi autem beatae ipsa ipsum
+        voluptatem. Magnam minima quibusdam pariatur dolorum.
+      </p>
+    </footer>
 
     <!-- Modal 1-->
     <div
