--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5 mb-md-0">
             <img
-              src="https://placeimg.com/600/800/animals"
+              src="https://placeimg.com/600/800/people"
               class="img-fluid rounded"
               alt=""
             />
